[package]
name = "logboop"
version = "0.0.1"
authors = ["Lux Phifollen <lymkwi@vulpinecitrus.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "*"
flate2 = "*"
regex = "*"
lazy_static = "*"
chrono = "*"
